# zed-view.tree-mol-support

./: .gitignore  Cargo.toml  LICENSE-APACHE  Makefile  README.md  as.view.tree  extension.toml  extension.wasm  test.view.tree
.github/workflows/: release.yml
grammars/: viewtree.wasm
languages/tree/: config.toml  highlights.scm  tree.tmLanguage.json
languages/viewtree/: config.toml  folds.scm  highlights.scm  indents.scm  locals.scm  outline.scm  overrides.scm  references.scm  tags.scm  textobjects.scm
lsp-server/: Cargo.toml
lsp-server/src/: main.rs
src/: lib.rs  lsp_server.rs
tree-sitter-moltree/: grammar.js  package.json  tree-sitter.json
tree-sitter-moltree/bindings/c/: tree-sitter-mol_view_tree.h  tree-sitter-mol_view_tree.pc.in
tree-sitter-moltree/bindings/go/: binding.go  binding_test.go
tree-sitter-moltree/bindings/node/: binding.cc  index.js
tree-sitter-moltree/bindings/python/tests/: test_binding.py
tree-sitter-moltree/bindings/python/tree_sitter_mol_view_tree/: __init__.py  binding.c
tree-sitter-moltree/bindings/rust/: build.rs  lib.rs
tree-sitter-moltree/bindings/swift/TreeSitterMolViewTreeTests/: TreeSitterMolViewTreeTests.swift
tree-sitter-moltree/src/: grammar.json  node-types.json  parser.c
