[package]
name = "view-tree-lsp-extension"
version = "0.1.0"
edition = "2021"
authors = ["Dev-cmyser"]
description = "View.Tree Language Server extension for Zed editor"
repository = "https://github.com/dev-cmyser/zed-view.tree-mol-support"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "view-tree-lsp"
path = "src/bin/view-tree-lsp.rs"

[dependencies]
zed_extension_api = "0.0.6"

# LSP Server dependencies
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system and text processing
walkdir = "2.0"
regex = "1.10"
url = "2.4"

# Utility dependencies
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Async utilities
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"

# For handling file paths and URIs
path-absolutize = "3.1"

[dependencies.lsp-types]
version = "0.94"
default-features = false
features = ["proposed"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"

[profile.dev]
debug = true
opt-level = 0